...
          floatingActionButton: Semantics(
            button: true,
            enabled: true,
            label: 'New Waste Post',
            hint: 'Add new waste post',
            child: FloatingActionButton(
                key: Key('addWastePost'),
                onPressed: () => Routes.addWastedPost(context),
                child: Icon(Icons.add_a_photo)),
          ),
        ),
      );
    } else {
...
